# ComfyUI-LoRA-Optimizer

./: README.md  __init__.py  kernel.py  lora_estimator.py  lora_optimizer.py  pyproject.toml  zimage_lora_merger.py
docs/: acestep-merge-optimization.md
docs/maintainers/: upstream-sync-correctness-pr.md
docs/plans/: 2026-03-03-architecture-aware-normalization.md  2026-03-10-spectral-ownership-improvements.md  2026-04-03-analysis-resume-design.md  2026-04-03-analysis-resume.md  2026-04-03-pair-lora-cache-design.md  2026-04-03-pair-lora-cache.md  2026-04-19-lora-combination-generator-design.md  2026-04-19-lora-combination-generator.md  2026-04-21-combinator-rerun-source.md  2026-04-21-combinator-rerun-toggle.md  2026-04-21-community-cache-upload-only.md  2026-04-21-estimator-prenode-design.md  2026-04-21-estimator-prenode.md
docs/wiki/: Community-Cache.md  Configuration-Guide.md  Home.md  How-It-Works.md  Merge-Algorithms.md  Nodes.md  Tips-and-Troubleshooting.md  Workflows.md  _Sidebar.md
example_workflows/: LoRa Optimizer(legacy).json  LoRa Optimizer-1.4.json  LoRa Optimizer-1.5.json  LoRa Optimizer.json  Lora Optimizer.json  Optimizer-test-ZiT-WF.json
js/: lora_compatibility_analyzer.js  lora_optimizer_bridge.js  lora_stack_dynamic.js
scripts/: build_estimator_index.py
tests/: test_estimator_features.py  test_estimator_freshness.py  test_estimator_integration.py  test_estimator_node.py  test_estimator_runtime.py  test_index_builder.py  test_lora_optimizer.py  test_per_prefix_capture.py
